src/objects/copado_envmgr__EnvironmentPersona__c.object
<CustomObject>
    <fields>
        <fullName>copado_envmgr__ApexCode__c</fullName>
        <defaultValue>&quot;User user = new User();&quot; &amp;BR()&amp; &quot;user.ProfileId = [SELECT Id FROM Profile WHERE Name = &apos;Standard User&apos;].Id;&quot; &amp;BR()&amp; &quot;user.LastName = &apos;USERNAME&apos;;&quot; &amp;BR()&amp; &quot;user.Email = &apos;EMAIL&apos;;&quot; &amp;BR()&amp; &quot;user.Username = &apos;USERNAME&apos;;&quot; &amp;BR()&amp; &quot;user.Alias = &apos;nr&apos;;&quot; &amp;BR()&amp; &quot;user.TimeZoneSidKey = &apos;America/Los_Angeles&apos;;&quot; &amp;BR()&amp; &quot;user.EmailEncodingKey = &apos;UTF-8&apos;;&quot; &amp;BR()&amp; &quot;user.LanguageLocaleKey = &apos;en_US&apos;;&quot; &amp;BR()&amp; &quot;user.LocaleSidKey = &apos;en_US&apos;;&quot; &amp;BR()&amp; &quot;insert user;&quot; &amp;BR()&amp; &quot;System.resetPassword(user.Id, true);&quot; &amp;BR()&amp; &quot;&quot;</defaultValue>
        <description>This Apex code will be executed when creating a User for an Environment.
You can not only create the user, but assign profiles, permissionsets, licenses, and any other need.</description>
        <inlineHelpText>This Apex code will be executed when creating a User for an Environment.
You can not only create the user, but assign profiles, permissionsets, licenses, and any other need.</inlineHelpText>
        <label>Apex Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__DefinitionJson__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>User Definition JSON. See Salesforce user creation definition json for details.</description>
        <inlineHelpText>User Definition JSON. See Salesforce user creation definition json for details.</inlineHelpText>
        <label>Definition Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__DeleteJobTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delete Job Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environment Personas (Delete Job Template)</relationshipLabel>
        <relationshipName>Environment_Personas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__EnvironmentDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment Definition</label>
        <referenceTo>copado_envmgr__EnvironmentDefinition__c</referenceTo>
        <relationshipLabel>Environment Personas</relationshipLabel>
        <relationshipName>Environment_Personas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ExpirationDays__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Expiration days after creating the User</description>
        <inlineHelpText>Expiration days after creating the User</inlineHelpText>
        <label>Expiration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__JobTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Customizable Job Template that will be executed when requesting a new Persona</description>
        <inlineHelpText>Customizable Job Template that will be executed when requesting a new Persona</inlineHelpText>
        <label>Create Job Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environment Personas</relationshipLabel>
        <relationshipName>Environment_Personas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Username__c</fullName>
        <description>Desired username pattern. You can use special variables such as {!RANDOM} to insert a 4 digit random number: 

qauser-{!RANDOM}@copado.com or qauser@copado.com.user{!RANDOM}</description>
        <inlineHelpText>Desired username pattern. You can use special variables such as {!RANDOM} to insert a 4 digit random number: 

qauser-{!RANDOM}@copado.com or qauser@copado.com.user{!RANDOM}</inlineHelpText>
        <label>Username</label>
        <length>85</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Environment Persona</label>
    <nameField>
        <label>EnvironmentPersona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>